[package]
name = "proxy-by-network"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bus = "0.9"
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
xdg = "3.0.0"
toml = "0.9.8"
systemd-journal-logger = "2.2.2"
colog = "1.4.0"
log = "0.4.29"
